src/snapshots/hemlis_lib__parser__tests__minimal_g.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule G () where\n\ng :: G.G (G.G G G) -> G G G\ng g =\n  g\n    <#> G.g (\\k v -> G (G k) v)\n    # G.gfromFoldable\n        \")"
---
44 of 44
===
Module
 Header
  MName
   (1, 7)->(1, 8)
  Decl::Sig
   Name
    (3, 0)->(3, 1)
   Typ::Arr
    Typ::App
     Typ::Constructor
      QProperName
       Qual
        (3, 5)->(3, 7)
       ProperName
        (3, 7)->(3, 8)
     Typ::Paren
      Typ::App
       Typ::App
        Typ::Constructor
         QProperName
          Qual
           (3, 10)->(3, 12)
          ProperName
           (3, 12)->(3, 13)
        Typ::Constructor
         QProperName
          NULL
          ProperName
           (3, 14)->(3, 15)
       Typ::Constructor
        QProperName
         NULL
         ProperName
          (3, 16)->(3, 17)
    Typ::App
     Typ::App
      Typ::Constructor
       QProperName
        NULL
        ProperName
         (3, 22)->(3, 23)
      Typ::Constructor
       QProperName
        NULL
        ProperName
         (3, 24)->(3, 25)
     Typ::Constructor
      QProperName
       NULL
       ProperName
        (3, 26)->(3, 27)
  Decl::Def
   Name
    (4, 0)->(4, 1)
    Binder::Var
     Name
      (4, 2)->(4, 3)
   GuardedExpr::Unconditional
    Expr::Op
     Expr::Ident
      QName
       NULL
       Name
        (5, 2)->(5, 3)
     QOp
      NULL
      Op
       (6, 4)->(6, 7)
     Expr::Op
      Expr::App
       Expr::Ident
        QName
         Qual
          (6, 8)->(6, 10)
         Name
          (6, 10)->(6, 11)
       Expr::Paren
        Expr::Lambda
         (6, 13)->(6, 14)
          Binder::Var
           Name
            (6, 14)->(6, 15)
          Binder::Var
           Name
            (6, 16)->(6, 17)
         Expr::App
          Expr::App
           Expr::Constructor
            QProperName
             NULL
             ProperName
              (6, 21)->(6, 22)
           Expr::Paren
            Expr::App
             Expr::Constructor
              QProperName
               NULL
               ProperName
                (6, 24)->(6, 25)
             Expr::Ident
              QName
               NULL
               Name
                (6, 26)->(6, 27)
          Expr::Ident
           QName
            NULL
            Name
             (6, 29)->(6, 30)
      QOp
       NULL
       Op
        (7, 4)->(7, 5)
      Expr::Ident
       QName
        Qual
         (7, 6)->(7, 8)
        Name
         (7, 8)->(7, 21)
===
