src/snapshots/hemlis_lib__parser__tests__normal_definition.snap
---
source: src/parser.rs
expression: "p_module(\"module A (a, b, c) where\")"
---
11 of 11
===
Module
 Header
  MName
   (0, 7)->(0, 8)
   Export::Value
    Name
     (0, 10)->(0, 11)
   Export::Value
    Name
     (0, 13)->(0, 14)
   Export::Value
    Name
     (0, 16)->(0, 17)
===
