src/snapshots/hemlis_lib__parser__tests__simple_joe_import.snap
---
source: src/parser.rs
expression: "p_import(\"import Joe\")"
---
7 of 7
===
Module
 Header
  MName
   (0, 7)->(0, 13)
  NULL
   ImportDecl
    MName
     (2, 7)->(2, 10)
    NULL
===
