src/snapshots/hemlis_lib__parser__tests__typ_operators.snap
---
source: src/parser.rs
expression: "p_typ(\"Array $ Maybe $ Maybe $ Int\")"
---
14 of 14
===
Module
 Header
  MName
   (0, 7)->(0, 10)
  NULL
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Op
    Typ::Op
     Typ::Op
      Typ::Constructor
       QProperName
        NULL
        ProperName
         (2, 5)->(2, 10)
      QOp
       NULL
       Op
        (2, 11)->(2, 12)
      Typ::Constructor
       QProperName
        NULL
        ProperName
         (2, 13)->(2, 18)
     QOp
      NULL
      Op
       (2, 19)->(2, 20)
     Typ::Constructor
      QProperName
       NULL
       ProperName
        (2, 21)->(2, 26)
    QOp
     NULL
     Op
      (2, 27)->(2, 28)
    Typ::Constructor
     QProperName
      NULL
      ProperName
       (2, 29)->(2, 32)
===
